[project]
name = "oauth-debug-mcp"
version = "0.1.0"
description = "An MCP server with tools for debugging OAuth 2.0 / OIDC flows, JWTs, PKCE, and client configuration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tarunlabs" }]
keywords = ["mcp", "oauth", "oidc", "jwt", "pkce", "debugging"]

dependencies = [
    "mcp>=1.2.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
oauth-debug-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]
include = ["server.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
